# Generative-AI

./: .gitignore  README.md  index.html  teachablemachine.html
Modern Python/Hello World/: Dockerfile  app.py  juptyer.ipynb
Modern Python/fastapi-helloworld/: README.md
Modern Python/hello_world_containerize_python/: app.py
Modern Python/hello_world_with_poetry/: pyproject.toml
docker/: Dockerfile  pyproject.toml
email_system/: recipients.xlsx  send_email.py  send_email_professional.py
fastapi-helloworld/: README.md  pyproject.toml
fastapi-helloworld/fastapi_helloworld/: main.py
hello_world_containerize_python/: app.py
hello_world_with_poetry/: README.md
hello_world_with_poetry/tests/: __init__.py
login_system/: .env  app.py  config.py  models.py  requirements.txt  utils.py
student_portal/: app.py
student_portal/forms/: login_form.py  signup_form.py
student_portal/services/: email_service.py
student_portal/templates/: signup.html  welcome.html
