[tool.poetry]
name = "docker-hello-world"
version = "0.1.0"
description = ""
authors = ["Muhammad Shaheer <ijlalkhanzada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
